--- a/App/Somari/Somari/Feeds/Views/FeedsViewController.xib
+++ b/App/Somari/Somari/Feeds/Views/FeedsViewController.xib
@@ -10,7 +10,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedsViewController" customModule="Somari" customModuleProvider="target">
             <connections>
-                <outlet property="feedsTableView" destination="l2O-TM-PQ7" id="IUL-Vm-2gD"/>
                 <outlet property="view" destination="iN0-l3-epB" id="INS-kJ-ebV"/>
             </connections>
         </placeholder>
@@ -18,19 +17,8 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l2O-TM-PQ7">
-                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
-            </subviews>
             <color key="backgroundColor" name="background"/>
-            <constraints>
-                <constraint firstItem="l2O-TM-PQ7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="956-4I-cou"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="l2O-TM-PQ7" secondAttribute="trailing" id="Ovl-g3-6g1"/>
-                <constraint firstItem="l2O-TM-PQ7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="VVI-fS-YJV"/>
-                <constraint firstAttribute="bottom" secondItem="l2O-TM-PQ7" secondAttribute="bottom" id="dv2-VG-31E"/>
-            </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="132" y="145"/>
         </view>
