--- a/App/SomariKit/SomariKit/FeedList/FeedListViewController.xib
+++ b/App/SomariKit/SomariKit/FeedList/FeedListViewController.xib
@@ -20,10 +20,10 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gdJ-CT-Fsp">
                     <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="gdJ-CT-Fsp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="33b-wH-fcf"/>
                 <constraint firstAttribute="bottom" secondItem="gdJ-CT-Fsp" secondAttribute="bottom" id="Iqp-6w-5Uj"/>
