--- a/App/Login/Login/Login/Views/LoginViewController.xib
+++ b/App/Login/Login/Login/Views/LoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="Login" customModuleProvider="target">
             <connections>
-                <outlet property="loginAnonymouslyView" destination="2tG-iK-Jlk" id="Q1l-v2-X6U"/>
+                <outlet property="loginAnonymouslyButton" destination="7SO-zX-jC5" id="kp1-7U-Byz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -50,45 +50,21 @@
                                 <constraint firstItem="Ig3-oc-o6b" firstAttribute="centerY" secondItem="1YI-n0-Izo" secondAttribute="centerY" id="kvI-cX-RwG"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2tG-iK-Jlk">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7SO-zX-jC5">
                             <rect key="frame" x="0.0" y="40" width="374" height="60"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="boC-tn-qiN">
-                                    <rect key="frame" x="84" y="10" width="206" height="40"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Vhf-nX-sXF">
-                                            <rect key="frame" x="0.0" y="1" width="40" height="38.666666666666671"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="40" id="3tj-yR-ByT"/>
-                                                <constraint firstAttribute="width" constant="40" id="fkh-XC-TOV"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="匿名でログインする" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7W-Zq-aqw">
-                                            <rect key="frame" x="50" y="0.0" width="156" height="40"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                            <color key="textColor" name="foreground"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="h7W-Zq-aqw" firstAttribute="leading" secondItem="Vhf-nX-sXF" secondAttribute="trailing" constant="10" id="1dD-Tr-G8H"/>
-                                        <constraint firstAttribute="trailing" secondItem="h7W-Zq-aqw" secondAttribute="trailing" id="6Bs-R5-dkM"/>
-                                        <constraint firstItem="h7W-Zq-aqw" firstAttribute="top" secondItem="boC-tn-qiN" secondAttribute="top" id="9MN-wr-nT5"/>
-                                        <constraint firstAttribute="bottom" secondItem="h7W-Zq-aqw" secondAttribute="bottom" id="Ksh-1b-X2L"/>
-                                        <constraint firstItem="Vhf-nX-sXF" firstAttribute="top" secondItem="boC-tn-qiN" secondAttribute="top" id="WPm-39-itH"/>
-                                        <constraint firstAttribute="bottom" secondItem="Vhf-nX-sXF" secondAttribute="bottom" id="d0G-AW-Tsh"/>
-                                        <constraint firstItem="Vhf-nX-sXF" firstAttribute="leading" secondItem="boC-tn-qiN" secondAttribute="leading" id="fvd-Rz-xF1"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
                             <color key="backgroundColor" name="background_second"/>
-                            <color key="tintColor" name="foreground_second"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="boC-tn-qiN" secondAttribute="bottom" constant="10" id="gyW-F1-6yt"/>
-                                <constraint firstItem="boC-tn-qiN" firstAttribute="centerX" secondItem="2tG-iK-Jlk" secondAttribute="centerX" id="oqG-c2-YOw"/>
-                                <constraint firstItem="boC-tn-qiN" firstAttribute="top" secondItem="2tG-iK-Jlk" secondAttribute="top" constant="10" id="vlS-8J-ge6"/>
+                                <constraint firstAttribute="height" constant="60" id="qSt-wM-77B"/>
                             </constraints>
-                        </view>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                            <color key="tintColor" name="foreground"/>
+                            <inset key="titleEdgeInsets" minX="9" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="9" maxY="0.0"/>
+                            <state key="normal" title="ログインせずに利用する" image="person.circle.fill" catalog="system">
+                                <color key="titleColor" name="foreground"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="bold"/>
+                            </state>
+                        </button>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="0Fh-2e-vr5"/>
