--- a/App/Addition/Addition/AdditionalFeedConfirm/Views/AdditionalFeedConfirmViewController.xib
+++ b/App/Addition/Addition/AdditionalFeedConfirm/Views/AdditionalFeedConfirmViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15508"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AdditionalFeedConfirmViewController" customModule="Somari" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AdditionalFeedConfirmViewController" customModule="Addition" customModuleProvider="target">
             <connections>
                 <outlet property="addButton" destination="OFQ-aP-Wmt" id="YDb-1E-ovH"/>
                 <outlet property="containerView" destination="Og1-7N-jIF" id="03R-rQ-dxA"/>
@@ -35,7 +35,7 @@
                     </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" name="aqua"/>
+            <color key="backgroundColor" name="orange"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Og1-7N-jIF" secondAttribute="trailing" id="8k9-tr-fxB"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="OFQ-aP-Wmt" secondAttribute="bottom" id="E1p-G7-tIh"/>
@@ -51,14 +51,14 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="aqua">
-            <color red="0.55686274509803924" green="0.75294117647058822" blue="0.48627450980392156" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="background">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="foreground">
             <color red="0.15686274509803921" green="0.15686274509803921" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="orange">
+            <color red="0.99607843137254903" green="0.50196078431372548" blue="0.098039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
